--- a/apps/static/assets/demo/demo.css
+++ b/apps/static/assets/demo/demo.css
@@ -61,3 +61,62 @@
   max-width: 530px;
   margin: 0 auto;
 }
+
+.drop-container {
+  position: relative;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  padding: 20px;
+  border-radius: 10px;
+  border: 2px dashed #555;
+  color: #fff;
+  cursor: pointer;
+  transition: background .2s ease-in-out, border .2s ease-in-out;
+}
+
+.drop-title {
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  transition: color .2s ease-in-out;
+}
+
+input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background: #00bf9a;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: background .2s ease-in-out;
+}
+
+input[type=file]::file-selector-button:hover {
+  background: #00bf9a;
+}
+
+.centered-div {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center; /* Centrar horizontalmente */
+  align-items: center; /* Centrar verticalmente */
+  height: 100%; /* Esto es opcional si deseas centrar verticalmente en toda la altura del div */
+}
+
+#cardResultProcess {
+  width: 100%; /* Ancho deseado del contenedor */
+  /*height: 90%;*/ /* Alto deseado del contenedor */
+  position: relative; /* Asegura que el contenedor tenga un contexto de posición para la imagen */
+}
+
+#cardResultProcess img {
+  width: 100%; /* Establece el ancho de la imagen al 100% del contenedor */
+  height: 100%; /* Establece el alto de la imagen al 100% del contenedor */
+  object-fit: cover; /* Opcional: controla cómo se ajusta la imagen en el contenedor */
+}
