--- a/apps/templates/home/predict-model.html
+++ b/apps/templates/home/predict-model.html
@@ -10,208 +10,116 @@
   <div class="content">
     <div class="row">
       <div class="col-md-12">
+        <div class="alert alert-success alert-with-icon" data-notify="container">
+          <button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
+            <i class="tim-icons icon-simple-remove"></i>
+          </button>
+          <span data-notify="icon" class="tim-icons icon-chat-33"></span>
+          <span data-notify="message">Agregue la muestra de sangre a trav&eacute;s del bot&oacute;n <b>Seleccionar archivo</b>, el resultado se procesará y almacenar&aacute; para futuras métricas y otros indicadores. Al procesar una imagen acepta los t&eacute;rminos y condiciones sobre el uso del sistema de detección. <br> <a href="https://www.w3schools.com" target="_blank">Ver t&eacute;rminos y condiciones.</a>
+          </span>
+        </div>
+        
         <div class="card ">
           <div class="card-header">
-            <h4 class="card-title">Importe imagen</h4>
+            <h4 class="card-title">Importe un archivo en formato .jpg, .jpeg o .png</h4>
           </div>
-          <!--
-          <form role="form" method="post" action="{{ url_for('authentication_blueprint.predict') }}">
-            <div class="card-body px-5 py-3">
-
-              <div class="row">
-                  <div class="col-md-12 px-md-1">
-                      <div class="form-group">
-                          <label>Room</label>
-                          <input 
-                            type="text" 
-                            name="rooms" 
-                            class="form-control"
-                            placeholder="Rooms" 
-                            required="required"
-                          >
-                      </div>
-                  </div>
-                  <div class="col-md-12 px-md-1">
-                    <div class="form-group">
-                        <label>Distance</label>
-                        <input 
-                          type="text" 
-                          name="distance" 
-                          class="form-control"
-                          placeholder="Distance" 
-                          required="required"
-                        >
-                    </div>
-                </div>
-                  
-              </div>
-              
-            </div>    
-
-            <div class="card-footer text-center">
-              <button type="submit" name="predict" class="btn btn-fill btn-primary">Predict</button>
-            </div>
-            <b>{{prediction_text}}</b>
-          </form>
-          -->
-          <form action="{{ url_for('authentication_blueprint.procesar_imagen') }}" method="post" enctype="multipart/form-data">
-            <input type="file"  class="form-control" name="imagen">
-            <input type="submit"  class="btn btn-fill btn-primary" value="Procesar Imagen">
-
-            <div id="resultado_imagen"></div>
-
-          </form>
-
-          <script>
-            document.addEventListener('DOMContentLoaded', function () {
-                const formulario = document.querySelector('form');
-                const resultadoImagen = document.getElementById('resultado_imagen');
-    
-                formulario.addEventListener('submit', function (e) {
-                    e.preventDefault();
-    
-                    const formData = new FormData(formulario);
-    
-                    fetch("{{ url_for('authentication_blueprint.procesar_imagen') }}", {
-                        method: 'POST',
-                        body: formData,
-                    })
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.error) {
-                            resultadoImagen.innerHTML = `<p>Error: ${data.error}</p>`;
-                        } else {
-                            resultadoImagen.innerHTML = `<p>Número de blobs detectados: ${data.num_blobs}</p>
-                                <img src="data:image/png;base64,${data.image_base64}" alt="Resultado">`;
-                        }
-                    })
-                    .catch(error => {
-                        console.error('Error:', error);
-                    });
-                });
-            });
-          </script>
-
+        
           <div class="card-body">
-            <div class="table-responsive">
-              <table class="table tablesorter " id="">
-                <thead class=" text-primary">
-                  <tr>
-                    <th>
-                      Name
-                    </th>
-                    <th>
-                      Country
-                    </th>
-                    <th>
-                      City
-                    </th>
-                    <th class="text-center">
-                      Salary
-                    </th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>
-                      Dakota Rice
-                    </td>
-                    <td>
-                      Niger
-                    </td>
-                    <td>
-                      Oud-Turnhout
-                    </td>
-                    <td class="text-center">
-                      $36,738
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      Minerva Hooper
-                    </td>
-                    <td>
-                      Curaçao
-                    </td>
-                    <td>
-                      Sinaai-Waas
-                    </td>
-                    <td class="text-center">
-                      $23,789
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      Sage Rodriguez
-                    </td>
-                    <td>
-                      Netherlands
-                    </td>
-                    <td>
-                      Baileux
-                    </td>
-                    <td class="text-center">
-                      $56,142
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      Philip Chaney
-                    </td>
-                    <td>
-                      Korea, South
-                    </td>
-                    <td>
-                      Overland Park
-                    </td>
-                    <td class="text-center">
-                      $38,735
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      Doris Greene
-                    </td>
-                    <td>
-                      Malawi
-                    </td>
-                    <td>
-                      Feldkirchen in Kärnten
-                    </td>
-                    <td class="text-center">
-                      $63,542
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      Mason Porter
-                    </td>
-                    <td>
-                      Chile
-                    </td>
-                    <td>
-                      Gloucester
-                    </td>
-                    <td class="text-center">
-                      $78,615
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      Jon Porter
-                    </td>
-                    <td>
-                      Portugal
-                    </td>
-                    <td>
-                      Gloucester
-                    </td>
-                    <td class="text-center">
-                      $98,615
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+
+            <form action="{{ url_for('authentication_blueprint.procesar_imagen') }}" method="post" enctype="multipart/form-data">
+              <!--
+              <input type="file"  class="form-control" name="imagen">
+              -->
+              <label for="images" class="drop-container" id="dropcontainer">
+                <span class="drop-title">Arrastre la imagen aqu&iacute;</span>
+                
+                O
+                <input type="file" id="images" name="imagen" accept="image/*" required>
+              </label>
+              <div class="centered-div">
+                <input type="submit" class="btn btn-fill btn-primary centered-button" value="Procesar Imagen">
+              </div>
+  
+            </form>
+
+           
+
+            
+           
+          </div>
+        </div>
+
+        
+      </div>
+      <div class="col-md-12">
+        <div class="card  card-plain">
+          <div id="cardHeaderProcess" class="card-header">
+            <h4 class="card-title">Los resultados se mostrarán aquí</h4>
+            <p class="category">Espere a que se cargue el contenido</p>
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-6">
+                <div id="cardResultProcess"></div>
+              </div>
+              <div class="col-md-6">
+                <div class="table-responsive">
+                  <table class="table tablesorter " id="tableResult">
+                    <thead class=" text-primary">
+                      <tr>
+                        <th colspan="2">
+                          Información del procesamiento
+                        </th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>
+                          Gl&oacute;bulos detectados:
+                        </td>
+                        <td>
+                          154
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          Tiempo de procesamiento:
+                        </td>
+                        <td>
+                          00:00:01
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          C&oacute;digo de proceso:
+                        </td>
+                        <td>
+                          bc9pe2iqinz5qz3
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          Calificar la precisi&oacute;n del resultado:
+                        </td>
+                        <td>
+                          <input type="range" name="">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td colspan="2">
+                          <textarea rows="4" cols="80" class="form-control" placeholder="Ingrese alguna nota u observación sobre los resultados." value="Mike"></textarea>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td colspan="2" style="border-top: none;">
+                          <button class="btn btn-primary btn-block" >Guardar Resultados</button>
+                        </td>
+                      </tr>
+                     
+                    </tbody>
+                  </table>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -230,15 +138,6 @@
                     <th>
                       Name
                     </th>
-                    <th>
-                      Country
-                    </th>
-                    <th>
-                      City
-                    </th>
-                    <th class="text-center">
-                      Salary
-                    </th>
                   </tr>
                 </thead>
                 <tbody>
@@ -246,98 +145,25 @@
                     <td>
                       Dakota Rice
                     </td>
+                  </tr>
+                  <tr>
                     <td>
-                      Niger
-                    </td>
-                    <td>
-                      Oud-Turnhout
-                    </td>
-                    <td class="text-center">
-                      $36,738
+                      Dakota Rice
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      Minerva Hooper
-                    </td>
-                    <td>
-                      Curaçao
-                    </td>
-                    <td>
-                      Sinaai-Waas
-                    </td>
-                    <td class="text-center">
-                      $23,789
+                      Dakota Rice
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      Sage Rodriguez
-                    </td>
-                    <td>
-                      Netherlands
-                    </td>
-                    <td>
-                      Baileux
-                    </td>
-                    <td class="text-center">
-                      $56,142
+                      Dakota Rice
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      Philip Chaney
-                    </td>
-                    <td>
-                      Korea, South
-                    </td>
-                    <td>
-                      Overland Park
-                    </td>
-                    <td class="text-center">
-                      $38,735
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      Doris Greene
-                    </td>
-                    <td>
-                      Malawi
-                    </td>
-                    <td>
-                      Feldkirchen in Kärnten
-                    </td>
-                    <td class="text-center">
-                      $63,542
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      Mason Porter
-                    </td>
-                    <td>
-                      Chile
-                    </td>
-                    <td>
-                      Gloucester
-                    </td>
-                    <td class="text-center">
-                      $78,615
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      Jon Porter
-                    </td>
-                    <td>
-                      Portugal
-                    </td>
-                    <td>
-                      Gloucester
-                    </td>
-                    <td class="text-center">
-                      $98,615
+                      Dakota Rice
                     </td>
                   </tr>
                 </tbody>
@@ -348,6 +174,64 @@
       </div>
     </div>
   </div>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const formulario = document.querySelector('form');
+        const cardHeaderProcess = document.getElementById('cardHeaderProcess');
+        const cardResultProcess = document.getElementById('cardResultProcess');
+        
+
+        formulario.addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const formData = new FormData(formulario);
+
+            fetch("{{ url_for('authentication_blueprint.procesar_imagen') }}", {
+                method: 'POST',
+                body: formData,
+            })
+            .then(response => response.json())
+            .then(data => {
+              if (data.error) {
+                cardResultProcess.innerHTML = `<p>Error: ${data.error}</p>`;
+              } 
+              else {
+                cardHeaderProcess.innerHTML = "";
+                //cardHeaderProcess.innerHTML = `<h4 class="card-title">Número de glóbulos detectados: ${data.num_blobs}</h4> <p class="category">El resultado se almacenará para futuras métricas</p>`
+
+                cardResultProcess.innerHTML = `<img src="data:image/png;base64,${data.image_base64}" style="width=100%;" alt="resultado">`;
+              }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+        });
+    });
+
+    const dropContainer = document.getElementById("dropcontainer")
+    const fileInput = document.getElementById("images")
+
+    dropContainer.addEventListener("dragover", (e) => {
+      // prevent default to allow drop
+      e.preventDefault()
+    }, false)
+
+    dropContainer.addEventListener("dragenter", () => {
+      dropContainer.classList.add("drag-active")
+    })
+
+    dropContainer.addEventListener("dragleave", () => {
+      dropContainer.classList.remove("drag-active")
+    })
+
+    dropContainer.addEventListener("drop", (e) => {
+      e.preventDefault()
+      dropContainer.classList.remove("drag-active")
+      fileInput.files = e.dataTransfer.files
+    })
+
+  </script>
 
 {% endblock content %}
 
