--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -25,31 +25,35 @@
                         <p>Modelo predictivo</p>
                     </a>
                 </li>
+                <!--
                 <li class="{% if 'user' in segment %} active {% endif %}">
                     <a href="/user.html">
                         <i class="tim-icons icon-single-02"></i>
                         <p>User Profile</p>
                     </a>
                 </li>
+                
                 <li class="{% if 'icons' in segment %} active {% endif %}">
                     <a href="/icons.html">
                         <i class="tim-icons icon-atom"></i>
                         <p>Icons</p>
                     </a>
                 </li>
+                -->
                 <li class="{% if 'notifications' in segment %} active {% endif %}">
-                    <a href="/notifications.html">
-                        <i class="tim-icons icon-bell-55"></i>
-                        <p>Notifications</p>
+                    <a href="/terms_and_conditions.html">
+                        <i class="tim-icons icon-book-bookmark"></i>
+                        <p>T&eacute;rminos y condiciones</p>
                     </a>
                 </li> 
-
+                <!--
                 <li class="{% if 'typography' in segment %} active {% endif %}">
                     <a href="/typography.html">
                         <i class="tim-icons icon-align-center"></i>
                         <p>Typography</p>
                     </a>
                 </li>
+                -->
                 <li>
                     <a href="{{ url_for('authentication_blueprint.logout') }}">
                         <i class="tim-icons icon-button-power"></i>
