--- a/apps/static/assets/demo/demo.css
+++ b/apps/static/assets/demo/demo.css
@@ -109,6 +109,13 @@ input[type=file]::file-selector-button:hover {
   height: 100%; /* Esto es opcional si deseas centrar verticalmente en toda la altura del div */
 }
 
+.modal-image {
+  width: 80%; /* La imagen ocupa el 100% del ancho del modal-body */
+  height: auto; /* La altura se ajusta automáticamente para mantener la proporción */
+  max-height: 100%; /* La altura máxima es igual al 100% del modal-body */
+  object-fit: cover; /* La imagen se ajusta para cubrir completamente el contenedor */
+}
+
 #cardResultProcess {
   width: 100%; /* Ancho deseado del contenedor */
   /*height: 90%;*/ /* Alto deseado del contenedor */
